# CS29202-Codes

./: README.md
A1/: program.java
A2/: parse  parse.cpp
A3/: main.py
A3/my_package/: README.md  model.py  setup.cfg  setup.py
A3/my_package/analysis/: visualize.py
A3/my_package/data/: dataset.py
A3/my_package/data/transforms/: blur.py  crop.py  flip.py  rescale.py  rotate.py
A3/my_package/my_package/data/transforms/: __init__.py  blur.py  crop.py  flip.py  rescale.py  rotate.py
A4/: ImageViewerGUI.py  README.md  my_package_rv4102-0.0.1-py3-none-any.whl
A4/my_package/my_package/: model.py
A4/my_package/my_package/analysis/: visualize.py
A4/my_package/my_package/data/transforms/: rescale.py
