[metadata]
name = my_package_rv4102
version = 0.0.1
author = Rushil Venkateswar
author_email = rushilv14@gmail.com
description = Package implementing image segmentation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rv1402/CS29202_Codes/tree/main/A3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPL v3 License
    Operating System :: OS Independent

[options]
package_dir =
    = analysis
    = data
    = data/transforms
packages = find:
python_requires = >=3.6

[options.packages.find]
where =
    = analysis
    = data
    = data/transforms